@@ -3,6 +3,8 @@
 ### 1.8.5
 * Fix - Footer widgets changed breakpoint
 * Fix - Keep default behaviour from sliders on mobile
+* Fix - Adjusted content.php to be more flexible for styles (LSX Blog Customizer requirement)
+* Fix - Small adjust on post archive - post item footer style
 
 ### 1.8.4
 * Fix - Re-added the get_comments_number() fix
